# TomarketBot

./: .env  .gitignore  README.md  TomarketBot.sh  env.py  main.py  pyproject.toml  requirements.txt
telegram/: tgClient.py
tomarket/: endpoints.py  farm.py  game.py  platform.py  tomarket.py
utils/: dt.py  loggy.py
