[project]
name = "tomarketbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fake-useragent>=1.5.1",
    "httpx>=0.27.2",
    "loguru>=0.7.2",
    "pyenvloadermeta>=1.0.2",
    "pyrogram>=2.0.106",
    "result>=0.17.0",
    "rich>=13.9.2",
    "tgcrypto>=1.2.5",
    "timecalculator>=1.2.1",
]
